--- a/css/main.css
+++ b/css/main.css
@@ -7,7 +7,7 @@ a {
 #wrapper {
   background-size: 100% 100%;
   background-attachment: fixed;
-  background-image: url(img/bread.jpg);
+  background-image: url(img/bread1.jpg);
   height: 100%;
   /*background-color: white*/
 }
