--- a/css/main.css
+++ b/css/main.css
@@ -3,11 +3,88 @@ html, body {
 }
 a {
   color: inherit;
+  font-family: 'Kaushan Script', cursive;
+  font-size: 24px;
+}
+#top_menu {
+  margin-top: 7%;
 }
 #wrapper {
   background-size: 100% 100%;
   background-attachment: fixed;
-  background-image: url(img/bread1.jpg);
+  background-image: url(../img/bread1.jpg);
   height: 100%;
-  /*background-color: white*/
+}
+#main_subtitle {
+  color: white;
+  margin: 0;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  margin-right: -50%;
+  transform: translate(-50%, -50%);
+  font-family: 'Kaushan Script', cursive;
+  text-shadow: 2px 2px #000000;
+}
+.nav-link {
+  color: white;
+  text-shadow: 1px 1px #000000;
+}
+.center {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  top:80%;
+  transform: translate(-50%, -50%);
+}
+
+.down {
+  position: relative;
+  width: 50px;
+  height: 80px;
+  border-radius: 25px;
+  background: transparent;
+  border: 2px solid #fff;
+  overflow: hidden;
+}
+
+.down:before {
+  content: '';
+  position: absolute;
+  width: 6px;
+  height: 6px;
+  border-radius: 50%;
+  background: #fff;
+  left: 50%;
+  top: 10px;
+  transform: translate(-50%, 0);
+  animation: animate 1s linear infinite;
+}
+
+.down:after {
+  content: '';
+  position: absolute;
+  width: 6px;
+  height: 15px;
+  border-radius: 50%;
+  background: #fff;
+  left: 50%;
+  top: 5px;
+  transform: translate(-50%, 0);
+  border-radius: 3px;
+}
+
+@keyframes animate {
+  0% {
+    transform: translate(-50%, 0px);
+    opacity: 0;
+  }
+  50% {
+    transform: translate(-50%, 40px);
+    opacity: 1;
+  }
+  100% {
+    transform: translate(-50%, 80px);
+    opacity: 0;
+  }
 }
