--- a/css/main.css
+++ b/css/main.css
@@ -6,6 +6,13 @@ a {
   font-family: 'Kaushan Script', cursive;
   font-size: 24px;
 }
+.navbar {
+   background-color: transparent;
+   background: transparent;
+   border-color: transparent;
+}
+
+.navbar li { color: #000 } 
 #top_menu {
   margin-top: 7%;
 }
