--- a/css/main.css
+++ b/css/main.css
@@ -2,6 +2,9 @@ html, body {
     height:100%;
 }
 @media (max-width: 576px) {
+  html, body {
+      height:100%;
+  }
   #main_subtitle {
     color: white;
     margin: 0;
